<resources>
    <string name="app_name">ClientTPJAD</string>

    <string name="loginButton">Login</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading_login_title">Loading</string>
    <string name="loading_login_message">Please wait</string>
    <string name="login_error_message">Incorrect username or password.</string>
    <string name="categoryButton">Add</string>
    <string name="productButton">Add</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">Please wait</string>
    <string name="categoriesTitle">Categories</string>
    <string name="categoryIdText">Id: %1$d</string>
    <string name="categoryLoadError">An error occurred</string>
    <string name="formCategoryNameLabel">Category name</string>
    <string name="updateCategoryButton">Update</string>
    <string name="removeCategoryButton">Remove</string>
    <string name="cancelFormButton">Cancel</string>
    <string name="productsTitle">Products</string>
    <string name="productIdText">Id: %1$d</string>
    <string name="productLoadError">An error occurred</string>
    <string name="formProductNameLabel">Product name</string>
    <string name="formProductDescriptionLabel">Product description</string>
    <string name="formProductStockLabel">Product stock</string>
    <string name="formProductCategoryLabel">Category</string>
    <string name="updateProductButton">Update</string>
    <string name="removeProductButton">Remove</string>
    <string name="request_error">An error occurred.</string>
    <string name="productNameError">Please insert a name.</string>
    <string name="productDescriptionError">Please insert a description.</string>
    <string name="productStockError">Please insert a valid stock.</string>
    <string name="categoryNameError">Please insert a name.</string>
    <string name="usernameError">Please insert your username.</string>
    <string name="passwordError">Please insert a password.</string>
    <string name="product_name_hint">Product Name</string>
    <string name="product_description_hint">Product Description</string>
    <string name="product_stock_hint">Stock</string>
    <string name="category_name_hint">Category Name</string>
</resources>
