<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/formProductNameLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/tabsColorPrimaryDark"
        android:id="@+id/formProductNameText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/formProductDescriptionLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/tabsColorPrimaryDark"
        android:id="@+id/formProductDescriptionText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/formProductStockLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/tabsColorPrimaryDark"
        android:id="@+id/formProductStockText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/formProductCategoryLabel"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tabsColorPrimary"
        android:id="@+id/formProductCategorySpinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/tabsColorPrimary"
            android:id="@+id/updateProductButton"
            android:text="@string/updateProductButton" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/removeProductButton"
            android:textColor="@color/tabsColorPrimary"
            android:text="@string/removeProductButton" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/closeFormButton"
            android:textColor="@color/tabsColorPrimary"
            android:text="@string/cancelFormButton" />

    </LinearLayout>

</LinearLayout>
